# vskill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agents.json  eslint.config.js  figma.config.json  lighthouse.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.agents/plugins/: marketplace.json
.claude/: launch.json
.claude-plugin/: marketplace.json
.gemini/skills/: obsidian-brain
.github/: CODEOWNERS  cliff.toml  lighthouserc.json
.github/workflows/: ci.yml  desktop-release.yml  desktop-rollback.yml  e2e-lifecycle-nightly.yml  e2e-live-nightly.yml  golden-path-nightly.yml  lighthouse.yml  notarize-dryrun.yml
.specweave/reports/: code-review-2026-03-19.json  code-review-2026-03-30.json  code-review-plugin-registry-2026-03-19.json  code-review-post-fix-2026-03-19.json
.specweave/state/: dashboard.json  lsp-check.json  prompt-health.json  skill-triggers-index.json
.vskill/: studio.json
docs/: ARCHITECTURE.md  skill-lifecycle-testing.md  skills-showcase.md
e2e/: 0702-keys-cli.spec.ts  0702-settings-modal-ux.spec.ts  0702-settings-persist.spec.ts  0703-create-flow-hotfix.spec.ts  0756-before-after.spec.ts  0756-detail-page-proof.spec.ts  0756-npm-published.spec.ts  0756-temporal-monitor.spec.ts  0756-zero-zero-zero-fix.spec.ts  0759-studio-publish.spec.ts  0792-studio-ia.spec.ts  0800-tests-discoverability.spec.ts  0821-check-updates-batching.spec.ts  0839-cli-auth-tenant-switcher.spec.ts  0863-folder-switch.spec.ts  README.md  account-theme-readability.spec.ts  agent-model-picker.spec.ts  agent-scope-picker.spec.ts  deps-tab-easychamp.spec.ts  detail-panel.spec.ts  eval-ui.spec.ts  find-skills-palette-design.spec.ts  find-skills-palette.spec.ts  keyboard-shortcuts.spec.ts  leaderboard.spec.ts  lifecycle-demo-video.spec.ts  lighthouse-budget.spec.ts  llm-integration-report.md  lm-studio-smoke.spec.ts  multiproject-scopes.spec.ts  performance-marks.spec.ts  playwright-run-log-1776928243.txt  playwright-verification-report.md  qa-click-audit.spec.ts  qa-findings.md  sidebar-split.spec.ts  skill-studio-regression.spec.ts  skill-update-pipeline-live.spec.ts  skill-update-pipeline.spec.ts  (+12 more)
e2e/desktop/: account-parity.spec.ts  auth-and-paywall.spec.ts  auth-flow-regression.spec.ts  auto-update.spec.ts  webview-no-token-leak.spec.ts
e2e/scripts/: record-lifecycle-demo.sh
plugins/backend/: PLUGIN.md
plugins/codex-bridge/: README.md
plugins/confluent/: PLUGIN.md  README.md
plugins/cost/: PLUGIN.md
plugins/frontend/: PLUGIN.md
plugins/infra/: PLUGIN.md
plugins/k8s/: PLUGIN.md
plugins/kafka/: IMPLEMENTATION-COMPLETE.md  PLUGIN.md  README.md  package.json  tsconfig.json
plugins/kafka-streams/: PLUGIN.md  README.md
plugins/ml/: PLUGIN.md  README.md
plugins/mobile/: PLUGIN.md  README.md
plugins/n8n/: PLUGIN.md  README.md
plugins/payments/: PLUGIN.md
plugins/testing/: PLUGIN.md
plugins/vs/: IMPLEMENTATION-COMPLETE.md
scripts/: check-bundle-compliance.sh  check-bundle-size.ts  check-coverage-thresholds.sh  check-no-shimmer.ts  check-serif-scope.ts  check-strings-voice.ts  generate-agents-json.test.ts  generate-agents-json.ts  generate-studio-icons.ts  preuninstall.cjs  sync-readme-badges.cjs  validate-skills-spec.ts
scripts/__tests__/: check-strings-voice.0682.test.ts  sync-readme-badges.test.ts
scripts/demo/: make-lifecycle-video.sh
scripts/desktop/: README.md  build-sidecar-linux.sh  build-sidecar-windows.ps1  build-sidecar.sh  sidecar-entry.mjs
scripts/release/: generate-minisign-key.sh  linux-README.md  linux-build.sh  macos-README.md  macos-build.sh  notarize-macos.sh  publish-manifest.sh  release-desktop.sh  release-notes.sh  sign-bundle-v1.0.12.sh  sign-linux-artifacts.sh  update-brew-cask.sh  windows-README.md  windows-build.ps1
skills/greet-anton/: SKILL.md
skills/greet-elena/: SKILL.md  draft.json
skills/handoff/: SKILL.md
skills/hyperframes-best-practices/: SKILL.md
skills/remotion-best-practices/: SKILL.md
src/: bin.ts  first-run-onboarding.ts  index.ts
src-tauri/: Cargo.toml  Entitlements.plist  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  studio-updater.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-app-commands.toml  allow-updater-commands.toml
src-tauri/src/: commands.rs  lib.rs  lifecycle.rs  lifecycle_modal.rs  main.rs  menu.rs  sidecar.rs
src-tauri/src/account/: commands.rs  mod.rs  tests.rs
src-tauri/src/auth/: device_flow.rs  github_client.rs  grant_revoke.rs  mod.rs  token_store.rs
src-tauri/src/folders/: classifier.rs  git_remote.rs  mod.rs
src-tauri/src/preferences/: mod.rs  settings.rs  updater.rs  window.rs
src-tauri/src/process_discovery/: mod.rs
src-tauri/src/quota/: cache.rs  count.rs  mod.rs  sync.rs
src/__tests__/: enable-disable-roundtrip.test.ts  first-run-onboarding-claude-detect.test.ts  first-run-onboarding.test.ts
src/agents/: agents-registry.test.ts  agents-registry.ts
src/api/: client-auth.test.ts  client.test.ts  client.ts
src/audit/: audit-integration.test.ts  audit-llm.test.ts  audit-llm.ts  audit-patterns.test.ts  audit-patterns.ts  audit-scanner.test.ts  audit-scanner.ts  audit-types.test.ts  audit-types.ts  config.test.ts  config.ts  file-discovery.test.ts  file-discovery.ts  fix-suggestions.test.ts  fix-suggestions.ts  index.ts
src/blocklist/: blocklist-e2e.test.ts  blocklist.test.ts  blocklist.ts  types.ts
src/clone/: github-scaffold.ts  provenance-fork.ts  reference-scanner.ts  skill-locator.ts  target-router.ts  types.ts
src/commands/: add-blocklist-e2e.test.ts  add-lockfile.ts  add-tenant.test.ts  add-wizard.test.ts  add.test.ts  add.ts  audit.test.ts  audit.ts  auth.ts  blocklist.test.ts  blocklist.ts  check.ts  cleanup.ts  clone-prompts.ts  clone.ts  copy-plugin-filtered.test.ts  diff.test.ts  diff.ts  disable.ts  enable.ts  eval.ts  find.test.ts  find.ts  info.ts  init.ts  keys.ts  list.ts  marketplace.test.ts  orgs.test.ts  (+24 more)
test-results/: .last-run.json
(+1690 files in other folders)
